--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 
 //==============--container max-width--============
-$cmw:1047+30px;
+$cmw:1077px;
 //==========================================================================================SCROLLBAR
 ::-webkit-scrollbar {
 	width: inherit;
@@ -31,6 +31,7 @@ body.lock{
 }
 //==========================================================================================
 .-ibg{
+	display:none;
 	position:relative;
 	img{
 		position: absolute;
