--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,7 @@ body.lock{
 .finance {
 	position: relative;
 	&__bg-image {
+		display:none;
 		position: absolute;
 		width: 100%;
 		height: 100%;
