--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,7 @@ body.lock {
   position: relative;
 }
 .finance__bg-image {
+  overflow: hidden;
   position: absolute;
   width: 100%;
   height: 100%;
