--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,7 @@ body.lock {
   position: relative;
 }
 .finance__bg-image {
-  overflow: hidden;
+  overflow: hiddensss;
   position: absolute;
   width: 100%;
   height: 100%;
